--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
@@ -164,9 +164,9 @@ Metaphorically, you can imagine this as the information channel massaging your t
 
 ### 检测意外
 
-Human [learn drive](https://supermemo.guru/wiki/Learn_drive) is based on detecting [surprisal](https://en.wikipedia.org/wiki/Self-information). We have known that for ages. All models of human and machine learning involve that concept under different names. [Piaget](https://en.wikipedia.org/wiki/Jean_Piaget) wrote about [schemata](https://en.wikipedia.org/wiki/Jean_Piaget#Schema) that fall into disequilibrium under the impact of surprisal. In his models of the neocortex, [Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins)speaks of prediction errors that underlie learning and intelligence. I like to speak of models, and their elaboration \(when new information fits the model\), or contradiction \(when new information requires changes to the model\).
+Human [learn drive](https://supermemo.guru/wiki/Learn_drive) is based on detecting [surprisal](https://en.wikipedia.org/wiki/Self-information). We have known that for ages. All models of human and machine learning involve that concept under different names. [Piaget](https://en.wikipedia.org/wiki/Jean_Piaget) wrote about [schemata](https://en.wikipedia.org/wiki/Jean_Piaget#Schema) that fall into disequilibrium under the impact of surprisal. In his models of the neocortex, [Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins) speaks of prediction errors that underlie learning and intelligence. I like to speak of models, and their elaboration \(when new information fits the model\), or contradiction \(when new information requires changes to the model\).
 
-人类的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是基于对[意外](https://en.wikipedia.org/wiki/Self-information)的检测。我们已经知道这一点很久了。人类和机器学习模型都以不同的名称涉及到这个概念。[Piaget](https://en.wikipedia.org/wiki/Jean_Piaget) 写过，[图式](https://en.wikipedia.org/wiki/Jean_Piaget#Schema)在意外的影响下陷入失调。[Jeff\_Hawki](https://en.wikipedia.org/wiki/Jeff_Hawkins) 在他的新大脑皮层模型中谈到了基于学习和智力的预测错误。我喜欢谈论模型，以及它们的细化\(当新数据适合模型时\)，或者矛盾\(当新数据需要改变模型时\)。
+人类的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是基于对[意外](https://en.wikipedia.org/wiki/Self-information)的检测。我们已经知道这一点很久了。人类和机器学习模型都以不同的名称涉及到这个概念。[Piaget](https://en.wikipedia.org/wiki/Jean_Piaget) 写过，[图式](https://en.wikipedia.org/wiki/Jean_Piaget#Schema)在意外的影响下陷入失调。[Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins) 在他的新大脑皮层模型中谈到了基于学习和智力的预测错误。我喜欢谈论模型，以及它们的细化\(当新数据适合模型时\)，或者矛盾\(当新数据需要改变模型时\)。
 
 For the reward of learning, a new surprising piece of information needs to fit pre-existing knowledge \(models, schemata, predictions, or so\). For the reward to be delivered, neural processing is necessary. Information on the input needs to be processed and compared with information stored in the brain. One of the chief processors of input information in the brain is the hippocampus. It is the brain's information switchboard that is able to compare the input with prior knowledge.
 
@@ -364,9 +364,9 @@ Where I speak of golden nuggets of knowledge, Peter Thiel speaks of the [power l
 >
 > 我有我自己鲜明的例子来说明评估网络在对抗教育系统方面的力量：
 >
-> In 1985, I computed the approximate function of optimum intervals for knowledge review needed for developing long-term memories. This was the birth to [SuperMemo](https://supermemo.guru/wiki/SuperMemo). Originally, the function was applicable using a [pen and paper](http://www.super-memory.com/articles/paper.htm). Within a few months, I realized the system was extremely powerful. I knew I could double its power with the use of a computer. However, I did not know anyone who could write learning software based on my math. In those days, the entire population of programmers in Poland was made of old timers doing Fortran or Cobol on mainframes, or a growing mass of amateur enthusiasts working with microcomputers such as ZX 81, Commodore 64, or ZX Spectrum. I decided to write the program myself. I had no programming skills though. I was a student of computer science and I asked my teachers for help. However, our only course of programming was the assembly language of Datapoint. Those skills were great for playing with registers and coming up with 11_11=121. I wanted to learn something more useful for programming SuperMemo. My school kept demanding that I learn to compute the resistance of an electronic circuit, or learn symbolic integration. My knowledge valuation network produced a simple output: programming skills -&gt; SuperMemo -&gt; faster learning \(in all fields, incl. electronics or calculus\). I was determined to learn programming. My school was determined to stop me \(by loading other compulsory courses\). In desperation, I enrolled in University of Economics, which had a course of algorithmic languages. The course focused on [Pascal](https://en.wikipedia.org/wiki/Pascal_%28programming_language). I had to do my normal load of classes and do my Pascal in extra time. That course was nice, but we did all learning in theory. On paper. There were very few PCs at Polish universities in those days \(1986\) and most practical applications run on mainframes called [Odra](https://en.wikipedia.org/wiki/Odra_%28computer) (produced for Soviet block in Poland as of 1960\). When I finally got my first computer: [_ZX Spectrum_](https://en.wikipedia.org/wiki/ZX_Spectrum) \(Jan 4, 1986\), I could finally start learning programming languages. Before the computer arrived, I started writing my first program! On paper. It was a program for organizing my day \(sort of [_Plan_](http://help.supermemo.org/wiki/Plan](http://help.supermemo.org/wiki/Plan) in SuperMemo\). Not much later, I was able to learn Pascal too. First I had to reduce the bad impact of school and cut the load of classes. I struck a deal with my teacher of electronic circuits. I would do some high-pass filter calculations for him, and this would be a chance to improve my Pascal skills. The program took many hours to write and was a monumental waste of time. It was a perfect example of bad learning. I hardly understood how my own program worked. However, it was still better than just learning diagrams. For programming, the learning was good and I improved my skills a lot.
+> In 1985, I computed the approximate function of optimum intervals for knowledge review needed for developing long-term memories. This was the birth to [SuperMemo](https://supermemo.guru/wiki/SuperMemo). Originally, the function was applicable using a [pen and paper](http://www.super-memory.com/articles/paper.htm). Within a few months, I realized the system was extremely powerful. I knew I could double its power with the use of a computer. However, I did not know anyone who could write learning software based on my math. In those days, the entire population of programmers in Poland was made of old timers doing Fortran or Cobol on mainframes, or a growing mass of amateur enthusiasts working with microcomputers such as ZX 81, Commodore 64, or ZX Spectrum. I decided to write the program myself. I had no programming skills though. I was a student of computer science and I asked my teachers for help. However, our only course of programming was the assembly language of Datapoint. Those skills were great for playing with registers and coming up with 11\*11=121. I wanted to learn something more useful for programming SuperMemo. My school kept demanding that I learn to compute the resistance of an electronic circuit, or learn symbolic integration. My knowledge valuation network produced a simple output: programming skills -&gt; SuperMemo -&gt; faster learning \(in all fields, incl. electronics or calculus\). I was determined to learn programming. My school was determined to stop me \(by loading other compulsory courses\). In desperation, I enrolled in University of Economics, which had a course of algorithmic languages. The course focused on [Pascal](https://en.wikipedia.org/wiki/Pascal_%28programming_language). I had to do my normal load of classes and do my Pascal in extra time. That course was nice, but we did all learning in theory. On paper. There were very few PCs at Polish universities in those days \(1986\) and most practical applications run on mainframes called [Odra](https://en.wikipedia.org/wiki/Odra_%28computer) (produced for Soviet block in Poland as of 1960\). When I finally got my first computer: [_ZX Spectrum_](https://en.wikipedia.org/wiki/ZX_Spectrum) \(Jan 4, 1986\), I could finally start learning programming languages. Before the computer arrived, I started writing my first program! On paper. It was a program for organizing my day \(sort of [_Plan_](http://help.supermemo.org/wiki/Plan) in SuperMemo\). Not much later, I was able to learn Pascal too. First I had to reduce the bad impact of school and cut the load of classes. I struck a deal with my teacher of electronic circuits. I would do some high-pass filter calculations for him, and this would be a chance to improve my Pascal skills. The program took many hours to write and was a monumental waste of time. It was a perfect example of bad learning. I hardly understood how my own program worked. However, it was still better than just learning diagrams. For programming, the learning was good and I improved my skills a lot.
 >
-> 1985 年，我算出了发展长期记忆所需的知识复习最佳间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用 ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 \* 11 = 121非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出：编程技能——&gt; SuperMemo ——&gt;更快的学习（在所有领域，包括电子或微积分）。我决心学习编程。我的学校决心阻止我\(通过要求选修其他必修课程\)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 [Pascal](https://en.wikipedia.org/wiki/Pascal_%28programming_language%29%29)。我不得不在做平时的功课的同时，在额外的时间里学习) Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时（1986 年）波兰大学里的个人电脑很少，大多数实用的应用都在名为 [Odra](https://en.wikipedia.org/wiki/Odra_%28computer) 的大型机上运行（从 1960 年开始，为在波兰的苏联集团生产）。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum)（1986 年 1 月 4 日），我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划（类似 [SuperMemo](http://help.supermemo.org/wiki/Plan) 中的计划）。不久之后，我也学会了 Pascal。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal 技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
+> 1985 年，我算出了发展长期记忆所需的知识复习最佳间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用 ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 \* 11 = 121 非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出：编程技能——&gt; SuperMemo ——&gt;更快的学习（在所有领域，包括电子或微积分）。我决心学习编程。我的学校决心阻止我\(通过要求选修其他必修课程\)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 [Pascal](https://en.wikipedia.org/wiki/Pascal_%28programming_language)。我不得不在做平时的功课的同时，在额外的时间里学习) Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时（1986 年）波兰大学里的个人电脑很少，大多数实用的应用都在名为 [Odra](https://en.wikipedia.org/wiki/Odra_%28computer) 的大型机上运行（从 1960 年开始，为在波兰的苏联集团生产）。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum)（1986 年 1 月 4 日），我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划（类似 SuperMemo 中的[计划](http://help.supermemo.org/wiki/Plan)）。不久之后，我也学会了 Pascal。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal 技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
 >
 > It is hard to express it in words to those who do not know programming, but the difference of knowledge valuations between university courses and doing one's own programming is comparable to the size difference between the plum and the Jupiter. While my colleagues suffered through boring lectures in electronics and metrology, I could make my start. I would learn nothing at school. I would learn a bit in my extracurricular course of Pascal. However, only the practical knowledge backed up by passion and clear goals mattered. By December 1987, my effort culminated in writing the first version of SuperMemo, which totally changed the course of my life. Open mind of my supervisor Dr Zbigniew Kierzowski let me devote my whole Master's Thesis to the subject of SuperMemo. Happy 80th birthday Professor Kierzkowski! It was pretty unusual for a student to make his own determination on that scale, and then compound it with the fact that the thesis was written in English. This fact is not unusual today, but it involved a big administrative and tactical battle back in 1989.
 >
@@ -378,7 +378,7 @@ Where I speak of golden nuggets of knowledge, Peter Thiel speaks of the [power l
 
 **My school was actively trying to block me from accomplishing the most important thing that underlay my entire professional life and future**. If I was a bit more compliant, more conformist, more prone to social pressures, I would be a "better" student, invest more time in the theory of electronic circuits, calculus, metrology, and abstract algebra. As a result, this article would have never been written. This site would not exist.
 
-**我的学校积极地试图阻止我完成我整个职业生涯和未来最重要的事情**如果我更听话，更顺从，更善于忍受社会压力，我会成为一名「更好」的学生，在电路学、微积分、计量学和抽象代数的理论上投入更多时间。其结果是，这篇文章永远不会被写出来。这个网站也将不存在。
+**我的学校积极地试图阻止我完成我整个职业生涯和未来最重要的事情**。如果我更听话，更顺从，更善于忍受社会压力，我会成为一名「更好」的学生，在电路学、微积分、计量学和抽象代数的理论上投入更多时间。其结果是，这篇文章永远不会被写出来。这个网站也将不存在。
 
 I would not trade my present life for any other type of career in research or industry. I survived the denial attack by providing resistance based on strong knowledge valuation network.
 
@@ -402,7 +402,7 @@ The complexity of the process calls for a better concept that can encapsulate al
 
 > **Learntropy is the attractiveness of any educative signal as determined by the learn drive system.**
 >
-> **学习熵是由学习内驱力系统决定的任何教育信号的吸引力**。
+> **学习熵是由学习内驱力系统决定的任何教育信号的吸引力。**
 
 Lectures can be boring or attractive. Learntropy expresses their attractiveness from the point of view of an individual.
 
