--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
@@ -146,7 +146,7 @@ Probability and complexity are not the only components in information perception
 
 I love Ken Robinson lectures on creativity. In one way, they are highly predictable. I totally agree with Robinson, so you can say that Robinson feeds my confirmation bias. This is pleasurable. When people agree with us, we like to say "_great minds think alike_". But if Robinson just kept repeating the same dry mantras on how schools kill creativity, he would lose his appeal. Entropy can be interpreted as the average expected [surprisal](https://en.wikipedia.org/wiki/Self-information). Robinson's delivery carries a great deal of nice surprises. He may paint the same models in a different and unusually creative way. As a result, **the brain receives new information, produces a generalization, and confirms the existing models**. Generalizations derived from new contexts increase [knowledge coherence](https://supermemo.guru/wiki/Knowledge_coherence). This a very pleasing type of complementarity in a message based on a known model.
 
-我喜欢 Ken Robinson 关于创造力的讲座。在某种程度上，它们是高度可预测的。我完全同意 Robinson，所以你可以说 Robinson 助长了我的证实性偏见。这很愉快。当人们与我们观点一致时，我们喜欢说「英雄所见略同」。但是，如果 Robinson 继续重复同样陈腔滥调，讲述学校如何扼杀创造力，他将失去吸引力。熵可以解释为平均预期[意外](https://en.wikipedia.org/wiki/Self-information)。Robinson 的讲授带来了很多意外。他可能会以不同的、不同寻常的创造性方式描绘相同的模型。因此，[大脑接收新的信息，产生泛化，并确认现有的模型。](https://en.wikipedia.org/wiki/Self-information)从新的语境中得出的泛化可以增强[知识的连贯性](https://supermemo.guru/wiki/Knowledge_coherence)。在基于已知模型的消息中，这是一种非常令人愉快的补充。
+我喜欢 Ken Robinson 关于创造力的讲座。在某种程度上，它们是高度可预测的。我完全同意 Robinson，所以你可以说 Robinson 助长了我的证实性偏见。这很愉快。当人们与我们观点一致时，我们喜欢说「英雄所见略同」。但是，如果 Robinson 继续重复同样陈腔滥调，讲述学校如何扼杀创造力，他将失去吸引力。熵可以解释为平均预期[意外](https://en.wikipedia.org/wiki/Self-information)。Robinson 的讲授带来了很多意外。他可能会以不同的、不同寻常的创造性方式描绘相同的模型。因此，**大脑接收新的信息，产生泛化，并确认现有的模型**。从新的语境中得出的泛化可以增强[知识的连贯性](https://supermemo.guru/wiki/Knowledge_coherence)。在基于已知模型的消息中，这是一种非常令人愉快的补充。
 
 Robinson lectures find a good balance between predictability and surprise.
 
@@ -338,7 +338,7 @@ The chief problem of educational system is a cookie-cutter approach in which all
 
 While a lecturing teacher may spend 45 minutes to feed a child with a long string of symbols that produce low valuations, and negligible memories, the same kid, with access to Google, within 3-5 minutes, will identify pieces of information with high valuations, and easy coding for lifetime retention. For kids well trained in the process, the efficiency of knowledge acquisition may be an order of magnitude higher in self-learning. When I say "order of magnitude", I am just being modest and conservative. I do not want to run into accusations of hyperbole. I included a couple of examples of specific comparisons in this text elsewhere \(e.g. [13 years of school in a month](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling) or [1600% acceleration of learning during vacation](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration)\).
 
-虽然讲课老师可能会花 45 分钟给孩子灌输一长串符号，这些符号会产生低估值和可忽略不计的记忆，但是同一个孩子可以在 3 - 5 分钟内访问谷歌，识别出具有高价值的信息，并且容易编码终身保留。对于在这一过程中受过良好训练的孩子来说，在自学过程中获得知识的效率可能会提高一个数量级。当我说「数量级」时，我只是谦虚和保守。我不想遭到夸张的指责。我在本文其他地方列举了几个具体比较的例子（例如[一个月内学习学校13年所教的知识](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling)，或者[在假期学习速度加快1600 %](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration) ）。
+虽然讲课老师可能会花 45 分钟给孩子灌输一长串符号，这些符号会产生低估值和可忽略不计的记忆，但是同一个孩子可以在 3 - 5 分钟内访问谷歌，识别出具有高价值的信息，并且容易编码终身保留。对于在这一过程中受过良好训练的孩子来说，在自学过程中获得知识的效率可能会提高一个数量级。当我说「数量级」时，我只是谦虚和保守。我不想遭到夸张的指责。我在本文其他地方列举了几个具体比较的例子（例如[一个月内学习学校 13 年所教的知识](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling)，或者[在假期学习速度加快1600 %](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration) ）。
 
 Where I speak of golden nuggets of knowledge, Peter Thiel speaks of the [power law](https://supermemo.guru/wiki/Thiel_on_power_law): a small set of core skills honed to perfection can produce power returns.
 
@@ -418,7 +418,7 @@ For good learning there is a reward. However, there is also bad learning. There 
 
 High knowledge valuations contribute to high [learntropy](https://supermemo.guru/wiki/Learntropy), which in turn is necessary for attention and semantic slotting in of knowledge for long-term retention. In a powerful feedback loop, **learntropy enhances the learn drive, which underlies valuations that determine learntropy**. This feedback loop is kept in check by forgetting, learned helplessness, aging, injury, and the sheer availability of mental resources. With rational learning and lifestyle management, esp. with respect to the [natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle), the equilibrium can be maintained at the high [learn drive](https://supermemo.guru/wiki/Learn_drive) level for decades.
 
-高知识估值导致高[学习熵](https://supermemo.guru/wiki/learntropy)，而学习熵又为长期记忆知识的注意力和语义插入提供了必要条件。在强大的反馈循环中，**学习熵增强了**[**学习内驱力**](https://supermemo.guru/wiki/Learn_drive)**，这是决定学习熵的估值的基础。**这种反馈循环通过遗忘、习得性无助、衰老、伤害和精神资源的纯粹可用性来控制。通过合理的学习和生活方式管理，特别是[自然创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)，这种平衡可以在高[学习内驱力](https://supermemo.guru/wiki/Learn_drive)水平上保持几十年。
+高知识估值导致高[学习熵](https://supermemo.guru/wiki/learntropy)，而学习熵又为长期记忆知识的注意力和语义插入提供了必要条件。在强大的反馈循环中，**学习熵增强了[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，这是决定学习熵的估值的基础。**这种反馈循环通过遗忘、习得性无助、衰老、伤害和精神资源的纯粹可用性来控制。通过合理的学习和生活方式管理，特别是[自然创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)，这种平衡可以在高[学习内驱力](https://supermemo.guru/wiki/Learn_drive)水平上保持几十年。
 
 ### 6.12 Signal timing vs. learntropy
 
@@ -430,7 +430,7 @@ The degree of reward obtained from individual messages in the learning stream wi
 
 Unlike [Shannon entropy](https://en.wikipedia.org/wiki/Entropy_%28information_theory) that is based on averages, learntropy will be more of a trailing average where recent messages will carry a higher weight than messages delivered earlier in time. In addition, learntropy is rooted in rules that govern the [consolidation of memory](https://supermemo.guru/wiki/Two_component_model_of_memory), incl. the [spacing effect](https://supermemo.guru/wiki/Spacing_effect).
 
-与基于平均值的[香农熵](https://en.wikipedia.org/wiki/Entropy_%28information_theory%29%29)不同，学习熵更像是一个趋势平均数，最新的信息将比之前传授的信息具有更高的权重。此外，学习熵植根于支配[记忆巩固](https://supermemo.guru/wiki/Two_component_model_of_memory)的规律，包括[间隔效应](https://supermemo.guru/wiki/Spacing_effect)。
+与基于平均值的[香农熵](https://en.wikipedia.org/wiki/Entropy_%28information_theory)不同，学习熵更像是一个趋势平均数，最新的信息将比之前传授的信息具有更高的权重。此外，学习熵植根于支配[记忆巩固](https://supermemo.guru/wiki/Two_component_model_of_memory)的规律，包括[间隔效应](https://supermemo.guru/wiki/Spacing_effect)。
 
 The learntropy of a boring lecture will shoot up once a golden nugget of  fills an important gap in understanding. The increase in learntropy will be proportional to the expression of the [stability](https://supermemo.guru/wiki/Stability) of the memory trace determining knowledge valuation \(incl. descending traces in the [knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network)\). The impact of a golden nugget will wane in time. The cumulative effect of those happy discoveries will determine the level of learntropy at any given time \(e.g. during a lecture\).
 
