--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
@@ -86,7 +86,7 @@ Every listener will have his or her own preferred level of information entropy. 
 
 The brain cannot effectively detect the entropy of the signal hitting the retina or the eardrum. Like pixels of a monitor, retinal cells are not aware of what they display. If the detector, such as the hippocampus, is to light up in response to entropy, it must operate on the inputs from the entorhinal cortex \(i.e. the input to the hippocampus itself\). Those inputs will present the signal after a high degree of processing. Instead of pixels, it may present a concept. A high entropy signal at the sensory inputs will lose most of its noise component early in the process of neural selection, completion, and [generalization](https://supermemo.guru/wiki/Generalization). The signal-to-noise ratio will determine how much information is lost. The bigger the noise, the bigger the loss. The smarter we are, the more selective this processing will be and the more information will be lost at that stage. That's good. We become blind to detail. Pattern recognition will act like a deterministic function, which by definition, results in a drop in entropy. Complex patterns may become simple concepts. Those concepts will provide the actual input to the detector, e.g. the hippocampus.
 
-大脑无法有效检测撞击视网膜或耳膜的信号的熵。就像显示器上的像素一样，视网膜细胞也不知道它们传达了什么。如果检测器，如海马体，要根据熵而响应，它必须对来自内嗅皮层的输入\(即海马体本身的输入\)进行操作。这些输入将在高度处理后显示信号。它可能会呈现一个概念，而不是像素。感觉输入端的高熵信号将在神经选择、完善和[泛化](https://supermemo.guru/wiki/Generalization)过程的早期失去大部分噪声成分。信噪比将决定丢失多少信息。噪音越大，损失越大。我们越聪明，这个处理过程就越有选择性，在那个阶段会丢失越多信息。这很好。我们对细节视而不见。模式识别就像一个确定性函数，根据定义，它会导致熵的下降。复杂的模式可能会变成简单的概念。这些概念将为检测器提供实际输入，例如海马体。
+大脑无法有效检测撞击视网膜或耳膜的信号的熵。就像显示器上的像素一样，视网膜细胞也不知道它们传达了什么。如果检测器，如海马体，要根据熵而响应，它必须对来自内嗅皮层的输入（即海马体本身的输入）进行操作。这些输入将在高度处理后显示信号。它可能会呈现一个概念，而不是像素。感觉输入端的高熵信号将在神经选择、完善和[泛化](https://supermemo.guru/wiki/Generalization)过程的早期失去大部分噪声成分。信噪比将决定丢失多少信息。噪音越大，损失越大。我们越聪明，这个处理过程就越有选择性，在那个阶段会丢失越多信息。这很好。我们对细节视而不见。模式识别就像一个确定性函数，根据定义，它会导致熵的下降。复杂的模式可能会变成简单的概念。这些概念将为检测器提供实际输入，例如海马体。
 
 Note that the visual stream produced in experiments that prove the [response of the hippocampus to signal entropy](https://www.ncbi.nlm.nih.gov/pubmed/15896570) has a highly [symbolic nature](https://supermemo.guru/wiki/Abstract_knowledge). As such, the stream will lose far less information in processing. That highly simplified and [conceptualized](https://supermemo.guru/wiki/Generalization) message will be scanned for surprisal and provide guidance to the entire [learn drive](https://supermemo.guru/wiki/Learn_drive) system. This is why, in this case, the hippocampus appears to be responding to input entropy.
 
@@ -126,7 +126,7 @@ Low probability events carry more information. Average information determines en
 
 If you happen to tune in to radio news and you hear that "_Janet Jackson has delivered a baby_", your degree of interest will depend on the probability of the event. If you have no idea who Janet Jackson is, this is a high probability event. If some [350,000 women deliver babies every single day](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day), this is no longer news and is not new or interesting. The first death of a soldier in a war makes news, but when deaths incrase into the thousands, young lives become just a statistic.
 
-如果你碰巧收听了广播新闻，并且听到「_Janet Jackson 逊生了一个孩子_」，你的兴趣程度将取决于事件发生的概率。如果你不知道 Janet Jackson 是谁，这是一个高概率事件。如果[每天约有35万名女性分娩](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day)，这已经不是新闻，也不是新鲜事或有趣的事。一名士兵在战争中的第一次死亡将成为新闻，但是当死亡人数增加到成千上万时，年轻的生命将只是一个统计数字。
+如果你碰巧收听了广播新闻，并且听到「_Janet Jackson 逊生了一个孩子_」，你的兴趣程度将取决于事件发生的概率。如果你不知道 Janet Jackson 是谁，这是一个高概率事件。如果[每天约有 35 万名女性分娩](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day)，这已经不是新闻，也不是新鲜事或有趣的事。一名士兵在战争中的第一次死亡将成为新闻，但是当死亡人数增加到成千上万时，年轻的生命将只是一个统计数字。
 
 If you happen to know Janet Jackson or like her music, the probability of a baby delivery drops dramatically to the level of "_once in a lifetime_" \(for Janet\). This can make you become interested. However, if you recall Janet as a beautiful girl from some ancient sitcom, her baby delivery may go into the category of "_Impossible!_". If you realize Janet is 50 years old, and you know about menopause, you may instantly become morbidly curious about her case. Your prior knowledge determines how you respond to the message. There is no optimum entropy level for a channel. There is only an optimum entropy level that fits a specific brain. At this point you may see that we need to introduce a new derived concept, which we will [later](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy) call **learntropy**. Learntropy will determine the attractiveness of a given channel for a given brain.
 
@@ -166,11 +166,11 @@ Metaphorically, you can imagine this as the information channel massaging your t
 
 Human [learn drive](https://supermemo.guru/wiki/Learn_drive) is based on detecting [surprisal](https://en.wikipedia.org/wiki/Self-information). We have known that for ages. All models of human and machine learning involve that concept under different names. [Piaget](https://en.wikipedia.org/wiki/Jean_Piaget) wrote about [schemata](https://en.wikipedia.org/wiki/Jean_Piaget#Schema) that fall into disequilibrium under the impact of surprisal. In his models of the neocortex, [Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins) speaks of prediction errors that underlie learning and intelligence. I like to speak of models, and their elaboration \(when new information fits the model\), or contradiction \(when new information requires changes to the model\).
 
-人类的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是基于对[意外](https://en.wikipedia.org/wiki/Self-information)的检测。我们已经知道这一点很久了。人类和机器学习模型都以不同的名称涉及到这个概念。[Piaget](https://en.wikipedia.org/wiki/Jean_Piaget) 写过，[图式](https://en.wikipedia.org/wiki/Jean_Piaget#Schema)在意外的影响下陷入失调。[Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins) 在他的新大脑皮层模型中谈到了基于学习和智力的预测错误。我喜欢谈论模型，以及它们的细化\(当新数据适合模型时\)，或者矛盾\(当新数据需要改变模型时\)。
+人类的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是基于对[意外](https://en.wikipedia.org/wiki/Self-information)的检测。我们已经知道这一点很久了。人类和机器学习模型都以不同的名称涉及到这个概念。[Piaget](https://en.wikipedia.org/wiki/Jean_Piaget) 写过，[图式](https://en.wikipedia.org/wiki/Jean_Piaget#Schema)在意外的影响下陷入失调。[Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins) 在他的新大脑皮层模型中谈到了基于学习和智力的预测错误。我喜欢谈论模型，以及它们的细化（当新数据适合模型时），或者矛盾（当新数据需要改变模型时）。
 
 For the reward of learning, a new surprising piece of information needs to fit pre-existing knowledge \(models, schemata, predictions, or so\). For the reward to be delivered, neural processing is necessary. Information on the input needs to be processed and compared with information stored in the brain. One of the chief processors of input information in the brain is the hippocampus. It is the brain's information switchboard that is able to compare the input with prior knowledge.
 
-为了获得学习的奖励，一个新的令人意外的信息需要与预先存在的知识\(模型、图式、预测等等\)相容。为了获得奖励，神经处理是必要的。关于输入的信息需要被处理，并与存储在大脑中的信息进行比较。大脑输入信息的主要处理器之一是海马体。大脑的信息交换台能够将输入与先前的知识进行比较。
+为了获得学习的奖励，一个新的令人意外的信息需要与预先存在的知识（模型、图式、预测等等）相容。为了获得奖励，神经处理是必要的。关于输入的信息需要被处理，并与存储在大脑中的信息进行比较。大脑输入信息的主要处理器之一是海马体。大脑的信息交换台能够将输入与先前的知识进行比较。
 
 Measuring the entropy of the visual stream is not necessarily a reliable indicator of the pleasing power of the information channel. All information streamed to the hippocampus undergoes a high degree of processing. A stream of pixels representing a beautiful beach will be processed into a series of shapes and textures. Those in turn will model palms, sand, and the sea. This highly compressed simple information will determine the original response to the information input.
 
@@ -178,7 +178,7 @@ Measuring the entropy of the visual stream is not necessarily a reliable indicat
 
 Scanning for information in the environment is equivalent to scanning for scents of food. The scent is enticing, but only the actual feeding is a true reward. This is why entropy scanning does not need to be rewarding. All it needs to do is to lead to a reward. The anterior hippocampus responds to entropy, as noticed earlier, however experimental design made sure that the entropy refers to the combination of simple shapes that do not lose much information during input processing. Instead of speaking of signal entropy, we should rather focus on the input entropy at the information comparator such as the hippocampus. It is not the retinal pixels that matter, but the shape of the palm as represented on the comparator input. For the comparator, the high entropy pattern of grayness or static noise will not differ from whiteness or silence. They will all bring the same entropy on input: zero. This is why I used the term [learntropy](https://supermemo.guru/wiki/Learntropy) to accurately refer to the attractiveness of the information channel.
 
-扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器\(如海马\)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用「\[学习」这个词来准确地描述信息渠道的吸引力。
+扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器\(如海马\)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用「[学习](https://supermemo.guru/wiki/Learntropy)」这个词来准确地描述信息渠道的吸引力。
 
 The anterior hippocampus that responds to signal entropy is famous for the discovery of the Halle Berry neuron \(see [more](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html)\). Using electrodes implanted in a consenting epilepsy patient, researchers were able to pinpoint a single neuron consistently responding to images of Halle Berry in various contexts. The same neuron would also respond to Halle Berry's name. At the same time, posterior hippocampus might respond less consistently to Jennifer Aniston \(perhaps an indication of a preceding layer of neural processing\).
 
@@ -215,7 +215,7 @@ We know that the hippocampus connects directly with the nucleus accumbens \(the 
 1. the anticipation of pleasure and
 2. the ultimate reward.
 
-我们知道海马体直接与伏隔核（大脑快乐中枢）相连。此连接适用于两种情况:
+我们知道海马体直接与伏隔核（大脑快乐中枢）相连。此连接适用于两种情况：
 
 1. 对快乐的预期；
 2. 最终的奖励。
@@ -230,13 +230,13 @@ The anticipation would follow the detection of a high [learntropy](https://super
 
 In the summer of 1977, while looking for extraterrestrial intelligence, SETI researchers discovered an unusual radio signal coming from [Sagittarius](https://en.wikipedia.org/wiki/Sagittarius\(constellation\)). In the bland low-level noise of cosmic space the signal was highly unlikely. Low probability marks high surprisal. Astronomer Jerry Ehman circled 6 letters corresponding with the signal on a printout and mark it with "Wow!".
 
-1977 年夏天，在寻找外星智能的时候，SETI 的研究人员发现了一个来自[射手座](https://en.wikipedia.org/wiki/Sagittarius(constellation))的不寻常的无线电信号。在宇宙空间微弱的低水平噪声中，信号是极不可能出现的。低概率标志着高意外。天文学家 Jerry Ehman 在打印输出上圈出6个与信号相对应的字母，并在旁边写上了「Wow!」（哇！）。
+1977 年夏天，在寻找外星智能的时候，SETI 的研究人员发现了一个来自[射手座](https://en.wikipedia.org/wiki/Sagittarius\(constellation\))的不寻常的无线电信号。在宇宙空间微弱的低水平噪声中，信号是极不可能出现的。低概率标志着高意外。天文学家 Jerry Ehman 在打印输出上圈出 6 个与信号相对应的字母，并在旁边写上了「Wow!」（哇！）。
 
 [![A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the Wow! signal](https://supermemo.guru/images/thumb/d/d3/Wow_signal.jpg/500px-Wow_signal.jpg)](https://supermemo.guru/wiki/File:Wow_signal.jpg)
 
 > **Figure:** A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the [Wow! signal](https://en.wikipedia.org/wiki/Wow!_signal). \(source: Wikipedia\)
 >
-> **图：**一张彩色电脑打印出来的原始拷贝扫描件，拍摄于1977年[哇！信号](https://en.wikipedia.org/wiki/Wow!_signal)到达后的几年。（来源：维基百科）
+> **图：**一张彩色电脑打印出来的原始拷贝扫描件，拍摄于 1977 年[哇！信号](https://en.wikipedia.org/wiki/Wow!_signal)到达后的几年。（来源：维基百科）
 
 "Wow!" is how the brain responds to a sudden discovery. The moment is highly pleasurable. The entire purpose of the [learn drive](https://supermemo.guru/wiki/Learn_drive) is to look for wow factors in the environment. These are the most valuable nuggets of knowledge that complement what is currently known: the current model of reality. The pleasure of [incremental reading](https://supermemo.guru/wiki/Incremental_reading) comes from the condensed power of wows streamed into the student's brain.
 
@@ -250,7 +250,7 @@ The reliability of the information channel is important. If the error rate is hi
 
 信息渠道的可靠性很重要。如果错误率高，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)可能会减弱。当 Penzias 和 Wilson 在 1964 年发现宇宙微波背景辐射时，并没有「哇！」。困惑的研究人员继续从他们的无线电天线上移除鸽子粪便。解释神秘噪音时，他们优先考虑了鸽子粪的原因。1978 年，Penzias 和 Wilson 因为他们的发现获得了诺贝尔奖。
 
-When a scientist makes a discovery, he may exclaim "_Eureka!_" and punch the air. A neural network somewhere in his brain has produced a [generalization](https://supermemo.guru/wiki/Generalization)that results in sending a reward signal. This propagates further and makes an old man jump around the lab like a child.
+When a scientist makes a discovery, he may exclaim "_Eureka!_" and punch the air. A neural network somewhere in his brain has produced a [generalization](https://supermemo.guru/wiki/Generalization) that results in sending a reward signal. This propagates further and makes an old man jump around the lab like a child.
 
 当一个科学家有了一个发现，他可能会惊呼「尤里卡！」和手舞足蹈。他大脑中某个地方的神经网络产生了一种[泛化](https://supermemo.guru/wiki/Generalization)，结果发出了奖励信号。这进一步传播，让一个老人像孩子一样在实验室里跳跃。
 
@@ -338,7 +338,7 @@ The chief problem of educational system is a cookie-cutter approach in which all
 
 While a lecturing teacher may spend 45 minutes to feed a child with a long string of symbols that produce low valuations, and negligible memories, the same kid, with access to Google, within 3-5 minutes, will identify pieces of information with high valuations, and easy coding for lifetime retention. For kids well trained in the process, the efficiency of knowledge acquisition may be an order of magnitude higher in self-learning. When I say "order of magnitude", I am just being modest and conservative. I do not want to run into accusations of hyperbole. I included a couple of examples of specific comparisons in this text elsewhere \(e.g. [13 years of school in a month](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling) or [1600% acceleration of learning during vacation](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration)\).
 
-虽然讲课老师可能会花 45 分钟给孩子灌输一长串符号，这些符号会产生低估值和可忽略不计的记忆，但是同一个孩子可以在 3 - 5 分钟内访问谷歌，识别出具有高价值的信息，并且容易编码终身保留。对于在这一过程中受过良好训练的孩子来说，在自学过程中获得知识的效率可能会提高一个数量级。当我说「数量级」时，我只是谦虚和保守。我不想遭到夸张的指责。我在本文其他地方列举了几个具体比较的例子（例如[一个月内学习学校 13 年所教的知识](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling)，或者[在假期学习速度加快1600 %](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration) ）。
+虽然讲课老师可能会花 45 分钟给孩子灌输一长串符号，这些符号会产生低估值和可忽略不计的记忆，但是同一个孩子可以在 3 - 5 分钟内访问谷歌，识别出具有高价值的信息，并且容易编码终身保留。对于在这一过程中受过良好训练的孩子来说，在自学过程中获得知识的效率可能会提高一个数量级。当我说「数量级」时，我只是谦虚和保守。我不想遭到夸张的指责。我在本文其他地方列举了几个具体比较的例子（例如[一个月内学习学校 13 年所教的知识](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling)，或者[在假期学习速度加快 1600%](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration) ）。
 
 Where I speak of golden nuggets of knowledge, Peter Thiel speaks of the [power law](https://supermemo.guru/wiki/Thiel_on_power_law): a small set of core skills honed to perfection can produce power returns.
 
@@ -370,7 +370,7 @@ Where I speak of golden nuggets of knowledge, Peter Thiel speaks of the [power l
 >
 > It is hard to express it in words to those who do not know programming, but the difference of knowledge valuations between university courses and doing one's own programming is comparable to the size difference between the plum and the Jupiter. While my colleagues suffered through boring lectures in electronics and metrology, I could make my start. I would learn nothing at school. I would learn a bit in my extracurricular course of Pascal. However, only the practical knowledge backed up by passion and clear goals mattered. By December 1987, my effort culminated in writing the first version of SuperMemo, which totally changed the course of my life. Open mind of my supervisor Dr Zbigniew Kierzowski let me devote my whole Master's Thesis to the subject of SuperMemo. Happy 80th birthday Professor Kierzkowski! It was pretty unusual for a student to make his own determination on that scale, and then compound it with the fact that the thesis was written in English. This fact is not unusual today, but it involved a big administrative and tactical battle back in 1989.
 >
-> 对那些不懂编程的人来说，很难用语言表达出来，但是大学课程和自己编程之间的知识价值差异相当于李子和木星之间的大小差异。当我的同学们在电子学和计量学方面苦于无聊的讲座时，我已经可创业了。我在学校什么也学不到。我可以在 Pascal 的课外课程中学到一点。然而，只有激情和明确目标支持的实用知识才是重要的。到了 1987 年 12 月，我的努力达到了顶峰，写下了第一版 SuperMemo，这彻底改变了我的人生历程。我的导师 Zbigniew Kierzowski 博士的开明态度让我把我的硕士论文全部奉献给 SuperMemo 这个主题。80 岁生日快乐，Kierzkowski 教授 ！对于一个学生来说，在这个尺度上做出自己的决定，然后再加上论文是用英语写的，这是非常不寻常的。这一事实在今天并不罕见，但它涉及到1989年的一场大规模行政和战术斗争。
+> 对那些不懂编程的人来说，很难用语言表达出来，但是大学课程和自己编程之间的知识价值差异相当于李子和木星之间的大小差异。当我的同学们在电子学和计量学方面苦于无聊的讲座时，我已经可创业了。我在学校什么也学不到。我可以在 Pascal 的课外课程中学到一点。然而，只有激情和明确目标支持的实用知识才是重要的。到了 1987 年 12 月，我的努力达到了顶峰，写下了第一版 SuperMemo，这彻底改变了我的人生历程。我的导师 Zbigniew Kierzowski 博士的开明态度让我把我的硕士论文全部奉献给 SuperMemo 这个主题。80 岁生日快乐，Kierzkowski 教授 ！对于一个学生来说，在这个尺度上做出自己的决定，然后再加上论文是用英语写的，这是非常不寻常的。这一事实在今天并不罕见，但它涉及到 1989 年的一场大规模行政和战术斗争。
 >
 > My school almost destroyed [SuperMemo](https://supermemo.guru/wiki/SuperMemo), i.e. the major source of my present joy. There was no malice involved. Most of my college teachers were fantastic people. It was the system that was designed to squeeze students through a rigid curriculum rather than give them space for creative expression that is the best basis of education.
 >
