--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
@@ -50,7 +50,7 @@ You may recall from your physics class that entropy is a measure of disorder, an
 
 There is a sister concept in information theory called [Shannon entropy](https://en.wikipedia.org/wiki/Entropy_%28information_theory). It can be understood as the average value of information transmitted by a source. For example, take a channel that is continually transmitting a string of identical letters into infinity (e.g. a string of As: "AAAAAA..."). It is entirely predictable and carries an entropy of zero. We do not learn from such a channel.
 
-信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_%28information_theory%29%29)。它可以理解为由一个来源发送的信息的平均值。例如，假设一个渠道连续不断地将一串相同的字母传送到无穷远处（例如，一串 A :「AAAAAA…」）中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
+信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_%28information_theory%29%29)。它可以理解为由一个来源发送的信息的平均值。例如，假设一个渠道连续不断地将一串相同的字母传送到无穷远处（例如，一串 A:「AAAAAA…」）中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
 
 [Claude Shannon](https://en.wikipedia.org/wiki/Claude_Shannon) proposed the concept of information entropy in 1948. Soon after, scientists were hypothesizing as to whether the entropy of an information channel may have a powerful impact on how the brain perceives the value of the channel. In 1957, [Meyer hypothesized](https://supermemo.guru/wiki/Music_and_entropy) that the entropy of music determines the perception of its beauty. He concluded that a higher entropy may result in subjective tension, which correlates with more meaningful musical moments.
 
@@ -178,7 +178,7 @@ Measuring the entropy of the visual stream is not necessarily a reliable indicat
 
 Scanning for information in the environment is equivalent to scanning for scents of food. The scent is enticing, but only the actual feeding is a true reward. This is why entropy scanning does not need to be rewarding. All it needs to do is to lead to a reward. The anterior hippocampus responds to entropy, as noticed earlier, however experimental design made sure that the entropy refers to the combination of simple shapes that do not lose much information during input processing. Instead of speaking of signal entropy, we should rather focus on the input entropy at the information comparator such as the hippocampus. It is not the retinal pixels that matter, but the shape of the palm as represented on the comparator input. For the comparator, the high entropy pattern of grayness or static noise will not differ from whiteness or silence. They will all bring the same entropy on input: zero. This is why I used the term [learntropy](https://supermemo.guru/wiki/Learntropy) to accurately refer to the attractiveness of the information channel.
 
-扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器\(如海马\)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用「[学习](https://supermemo.guru/wiki/Learntropy)」这个词来准确地描述信息渠道的吸引力。
+扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器（如海马）的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵：零。这就是为什么我用「[学习熵](https://supermemo.guru/wiki/Learntropy)」这个词来准确地描述信息渠道的吸引力。
 
 The anterior hippocampus that responds to signal entropy is famous for the discovery of the Halle Berry neuron \(see [more](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html)\). Using electrodes implanted in a consenting epilepsy patient, researchers were able to pinpoint a single neuron consistently responding to images of Halle Berry in various contexts. The same neuron would also respond to Halle Berry's name. At the same time, posterior hippocampus might respond less consistently to Jennifer Aniston \(perhaps an indication of a preceding layer of neural processing\).
 
