--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
@@ -230,7 +230,7 @@ The anticipation would follow the detection of a high [learntropy](https://super
 
 In the summer of 1977, while looking for extraterrestrial intelligence, SETI researchers discovered an unusual radio signal coming from [Sagittarius](https://en.wikipedia.org/wiki/Sagittarius\_\(constellation\)). In the bland low-level noise of cosmic space the signal was highly unlikely. Low probability marks high surprisal. Astronomer Jerry Ehman circled 6 letters corresponding with the signal on a printout and mark it with "Wow!".
 
-1977 年夏天，在寻找外星智能的时候，SETI 的研究人员发现了一个来自[射手座](https://en.wikipedia.org/wiki/Sagittarius\(constellation\))的不寻常的无线电信号。在宇宙空间微弱的低水平噪声中，信号是极不可能出现的。低概率标志着高意外。天文学家 Jerry Ehman 在打印输出上圈出 6 个与信号相对应的字母，并在旁边写上了「Wow!」（哇！）。
+1977 年夏天，在寻找外星智能的时候，SETI 的研究人员发现了一个来自[射手座](https://en.wikipedia.org/wiki/Sagittarius\_\(constellation\))的不寻常的无线电信号。在宇宙空间微弱的低水平噪声中，信号是极不可能出现的。低概率标志着高意外。天文学家 Jerry Ehman 在打印输出上圈出 6 个与信号相对应的字母，并在旁边写上了「Wow!」（哇！）。
 
 [![A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the Wow! signal](https://supermemo.guru/images/thumb/d/d3/Wow_signal.jpg/500px-Wow_signal.jpg)](https://supermemo.guru/wiki/File:Wow_signal.jpg)
 
